@@ -12,7 +12,7 @@ var JSONPRequest = require('../JSONP-request');
 // expose original algoliasearch fn in window
 window.algoliasearch = require('./algoliasearch');
 
-global.angular.module('algoliasearch', [])
+window.angular.module('algoliasearch', [])
   .service('algolia', ['$http', '$q', '$timeout', function ($http, $q, $timeout) {
 
     function algoliasearch(applicationID, apiKey, opts) {
